{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 109,
  "lineage": "99ff8958-8d78-e40f-22e2-20a3bcc86ff2",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "home-monitoring/grafana",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 3,
                "labels": {},
                "name": "grafana",
                "namespace": "home-monitoring",
                "resource_version": "65966",
                "uid": "fabad732-f82c-411a-802c-a944b116407b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "grafana.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus-deployment-grafana",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "kube-dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/kube-dashboard",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "kube-dashboard",
                "namespace": "kube-system",
                "resource_version": "59691",
                "uid": "f226363e-0b74-4fc3-852b-54acc72de509"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "kube-dashboard.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "kubernetes-dashboard",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8443
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "plex",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "media-services/plex",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "plex",
                "namespace": "media-services",
                "resource_version": "14048",
                "uid": "b3d31ecc-2116-4079-a2bc-a06da5657b31"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "plex.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "plex-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 32400
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.plex-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "home-monitoring/prometheus",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "prometheus",
                "namespace": "home-monitoring",
                "resource_version": "65412",
                "uid": "a04aae37-68ad-45bc-b439-760bd087c4b9"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "prometheus.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "prometheus-deployment-kube-prometheus",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 9090
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "radarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "media-services/radarr",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "radarr",
                "namespace": "media-services",
                "resource_version": "14047",
                "uid": "6260336e-77be-4154-841b-e774636f0fa8"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "radarr.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "radarr-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 7878
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.radarr-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "sabnzbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "media-services/sabnzbd",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "sabnzbd",
                "namespace": "media-services",
                "resource_version": "14050",
                "uid": "7147e72e-21f6-45ac-b321-0a54b20ee573"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "sabnzbd.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "sabnzbd-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.sabnzbd-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "sonarr",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "media-services/sonarr",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "sonarr",
                "namespace": "media-services",
                "resource_version": "14046",
                "uid": "fd7dfcfd-8a18-4079-aff5-06ad889b1562"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "home-ingress-controller",
                "rule": [
                  {
                    "host": "sonarr.home.local",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "sonarr-svc",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8989
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.1.51"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_service.sonarr-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "13799",
                "uid": "9ef09fce-441a-47c3-95ad-04a325f881fe"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "media-services",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "media-services",
            "metadata": [
              {
                "generation": 0,
                "name": "media-services",
                "resource_version": "13800",
                "uid": "235d561d-d9c8-4569-8f2f-a6dd888b3398"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "monitoring-ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "home-monitoring",
            "metadata": [
              {
                "generation": 0,
                "name": "home-monitoring",
                "resource_version": "60854",
                "uid": "005f6e79-f514-47e7-9e41-7a26eb15bfc2"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "plex-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "media-services/plex-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "plex-svc",
                "namespace": "media-services",
                "resource_version": "13828",
                "uid": "dfcdd49f-6609-4721-832a-603c2f956663"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.152.183.72",
                "cluster_ips": [
                  "10.152.183.72"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 32400,
                    "protocol": "TCP",
                    "target_port": "32400"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service_name": "plex-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "radarr-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "media-services/radarr-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "radarr-svc",
                "namespace": "media-services",
                "resource_version": "13819",
                "uid": "9a9b591d-52d6-4f58-8a2b-922a100230ff"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.152.183.170",
                "cluster_ips": [
                  "10.152.183.170"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 7878,
                    "protocol": "TCP",
                    "target_port": "7878"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service_name": "radarr-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sabnzbd-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "media-services/sabnzbd-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "sabnzbd-svc",
                "namespace": "media-services",
                "resource_version": "13808",
                "uid": "a94b5e9f-a76d-4fb9-90e2-f9e6b10fbc7b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.152.183.129",
                "cluster_ips": [
                  "10.152.183.129"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service_name": "sabnzbd-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "sonarr-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "media-services/sonarr-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "sonarr-svc",
                "namespace": "media-services",
                "resource_version": "13802",
                "uid": "2d9da292-84b0-4eb0-8618-ad50c011f090"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.152.183.109",
                "cluster_ips": [
                  "10.152.183.109"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8989,
                    "protocol": "TCP",
                    "target_port": "8989"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service_name": "sonarr-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}